adding html, css and js files for other bhk categories

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>1-BHK Flats from Gruha</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="1bhk.css">
     <link rel = "icon" href = "D://Projects/Gruha/img/Untitled.png" type = "image/x-icon">
