initiation of JS part

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -18,7 +18,12 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
-      </div>
+    </div>
+
+    <div class="enter_price">
+        <h1>Search by price</h1>
+        <input >
+    </div>  
 </body>
 <script src="1bhk.js"></script>
 </html>
