basic js functionality of 1bhk category

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="1bhk.css">
     <link rel = "icon" href = "D://Projects/Gruha/img/Untitled.png" type = "image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
     <div class="topnav" id="myTopnav">
@@ -22,7 +23,8 @@
 
     <div class="enter_price">
         <h1>Search by price</h1>
-        <input >
+        <input type="number">
+        <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
     </div>  
 </body>
 <script src="1bhk.js"></script>
