--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -26,6 +26,10 @@
         <input type="number">
         <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
     </div>  
+    <br><br>
+    <div id="property-container">
+
+    </div>
 </body>
 <script src="1bhk.js"></script>
 </html>
