basic js part made, some changes required

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -23,7 +23,7 @@
 
     <div class="enter_price">
         <h1>Search by price</h1>
-        <input type="number">
+        <h4>Rs.</h4><input type="number">
         <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
     </div>  
     <br><br>
