update 1bhk page

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -23,13 +23,19 @@
 
     <div class="enter_price">
         <h1>Search by price</h1>
-        <h4>Rs.</h4><input type="number">
-        <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
-    </div>  
+        <h6>Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000</h6>
+        <h4>Rs.</h4><input>
+        <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button><br>
+        
+    </div> 
+    <!-- <img src="D://Projects/Gruha/img/Untitled.png" style="float:right">  -->
     <br><br>
-    <div id="property-container">
+    <div class="wrap">
+        <div id="property-container">
 
+        </div>
     </div>
+    
 </body>
 <script src="1bhk.js"></script>
 </html>
