--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
@@ -26,21 +27,21 @@
         <div class="row">
             <div class="blog-item-outer col-sm-12 col-md-3 bhk1">
               <div class="blog-item">
-                <a href="./1-bhk/1bhk.html" style="text-decoration: none; font-size: 3rem; color: #4A372B;">
+                <a href="./1-bhk/1bhk.html" style="text-decoration: none; font-size: 3.5rem; color: black;">
                     <center><strong>1-BHK</strong></center>
                 </a>
               </div>
             </div>
             <div class="blog-item-outer col-sm-12 col-md-3 bhk2">
                 <div class="blog-item">
-                  <a href="./2-bhk/2bhk.html" style="text-decoration: none; font-size: 3rem; color: #4A372B;">
+                  <a href="./2-bhk/2bhk.html" style="text-decoration: none; font-size: 3.5rem; color: #000000;">
                     <center><strong>2-BHK</strong></center>
                 </a>
                 </div>
               </div>
             <div class="blog-item-outer col-sm-12 col-md-3 bhk3">
                 <div class="blog-item">
-                  <a href="./3-bhk/3bhk.html" style="text-decoration: none; font-size: 3rem; color: #4A372B;">
+                  <a href="./3-bhk/3bhk.html" style="text-decoration: none; font-size: 3.5rem; color: rgb(0, 0, 0);">
                     <center><strong>3-BHK</strong></center>
                 </a>
                 </div>
