effects to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Gruha: Finding the best homes for you</title>
     <link rel = "icon" href = "./img/Untitled.png" type = "image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+    <link rel="stylesheet" href="animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
@@ -13,17 +15,17 @@
 </head>
 <body>
     <div id="front-top">
-        <br>
+        <br><br>
         <h1>Gruha</h1>
         <br><br>
-        <div id="highlight">
+        <div id="highlight" class="animate__animated animate__zoomIn">
             <h3>Finding the best homes for you</h3>
         </div>
     </div>
     <br>
     <div id="choose_bhk">
         <br>
-        <h2>Choose the BHK type of your dream home</h2>
+        <h2 style="font-family: 'Open Sans', sans-serif;">Choose the BHK type of your dream home</h2>
         <div class="row">
             <div class="blog-item-outer col-sm-12 col-md-3 bhk1">
               <div class="blog-item">
