--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="1bhk.css">
     <link rel = "icon" href = "D://Projects/Gruha/img/Untitled.png" type = "image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
@@ -20,10 +21,11 @@
           <i class="fa fa-bars"></i>
         </a>
     </div>
+    <br>
 
     <div class="enter_price">
-        <h1>Search by price</h1>
-        <h6>Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000</h6>
+        <h1>Search by Price</h1><br>
+        <h6>Note: Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000</h6><br>
         <h4>Rs.</h4><input>
         <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button><br>
         
