--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <br>
 
   <div id="About" data-aos="zoom-in-up" data-aos-duration="2000">
-    <h2>Who are we?</h2><br>
+    <h2>About</h2><br>
     <h4>Gruha is an attempt to make property searching easier and efficient in times, when we are able to find only a handful
          of homes on the internet, and are not so satisfied with the options available. Not a conventional place, where you will 
          deal with traditional brokers and loose excess money in commissions. In the cities of our service, we try to cover each 
