js code issue solved

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -26,8 +26,8 @@
     <div class="enter_price">
         <h1>Search by Price</h1><br>
         <h6>Note: Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000</h6><br>
-        <h4>Rs.</h4><input>
-        <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button><br>
+        <h4>Rs.</h4>
+        <input> <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button><br>
         
     </div> 
     <!-- <img src="D://Projects/Gruha/img/Untitled.png" style="float:right">  -->
