--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
+    <div id="container-wrap">
     <div class="topnav" id="myTopnav">
         <a href="D://Projects/Gruha/index.html"><img src="D://Projects/Gruha/img/Untitled.png" style="width: 1.5rem; height: auto;"> Gruha</a>
         <a href="D://Projects/Gruha/1-bhk/1bhk.html" class="active">1-BHK</a>
@@ -21,23 +22,22 @@
           <i class="fa fa-bars"></i>
         </a>
     </div>
-    <br>
 
     <div class="enter_price">
-        <h1>Search by Price</h1><br>
-        <h6>Note: Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000</h6><br>
-        <h4>Rs.</h4>
-        <input> <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button><br>
+        <h1 style="color: #F5F5F5;">Search by Price</h1><br>
+        <h3 style="color: rgb(0, 0, 0);"><strong>Note:  1)Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000<br><br>
+                                                        2)Being a representational site, it presently has only 5 values of prices being 16L, 18L, 19L, 20L and 22L. So please search in these alternatives to get the property details.</strong></h3><br>
+        <h4 style="color: #F5F5F5;">Rs.</h4>
+        <input> <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
         
     </div> 
-    <!-- <img src="D://Projects/Gruha/img/Untitled.png" style="float:right">  -->
-    <br><br>
+
     <div class="wrap">
         <div id="property-container">
 
         </div>
     </div>
-    
+    </div>
 </body>
 <script src="1bhk.js"></script>
 </html>
