--- a/2-bhk/2bhk.html
+++ b/2-bhk/2bhk.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2-BHK Flats from Gruha</title>
+    <title>1-BHK Flats from Gruha</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="2bhk.css">
     <link rel = "icon" href = "D://Projects/Gruha/img/Untitled.png" type = "image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
+    <div id="container-wrap">
     <div class="topnav" id="myTopnav">
         <a href="D://Projects/Gruha/index.html"><img src="D://Projects/Gruha/img/Untitled.png" style="width: 1.5rem; height: auto;"> Gruha</a>
         <a href="D://Projects/Gruha/1-bhk/1bhk.html">1-BHK</a>
@@ -18,7 +21,23 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
-      </div>
+    </div>
+
+    <div class="enter_price">
+        <h1 style="color: #F5F5F5;">Search by Price</h1><br>
+        <h3 style="color: rgb(0, 0, 0);"><strong>Note:  1)Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000<br><br>
+                                                        2)Being a representational site, it presently has only 5 values of prices being 16L, 18L, 19L, 20L and 22L. So please search in these alternatives to get the property details.</strong></h3><br>
+        <h4 style="color: #F5F5F5;">Rs.</h4>
+        <input> <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
+        
+    </div> 
+
+    <div class="wrap">
+        <div id="property-container">
+
+        </div>
+    </div>
+    </div>
 </body>
 <script src="2bhk.js"></script>
 </html>
