--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -25,7 +25,7 @@
 
     <div class="enter_price">
         <h1 style="color: #F5F5F5;">Search by Price</h1><br>
-        <h3 style="color: rgb(0, 0, 0);"><strong>Note:  1)Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000<br><br>
+        <h3 style="color: rgb(0, 0, 0);"><strong>Note:  1)Enter the value do not use ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 16,00,000, but write it as 1600000<br><br>
                                                         2)Being a representational site, it presently has only 5 values of prices being 16L, 18L, 19L, 20L and 22L. So please search in these alternatives to get the property details.</strong></h3><br>
         <h4 style="color: #F5F5F5;">Rs.</h4>
         <input> <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
