--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="#About">About</a>
       <a href="#">Services</a>
       <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      <a href="#">Attachments</a>
     </div>
     
     <!-- Use any element to open the sidenav -->
