--- a/2-bhk/2bhk.html
+++ b/2-bhk/2bhk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1-BHK Flats from Gruha</title>
+    <title>2-BHK Flats from Gruha</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="2bhk.css">
     <link rel = "icon" href = "D://Projects/Gruha/img/Untitled.png" type = "image/x-icon">
@@ -25,8 +25,8 @@
 
     <div class="enter_price">
         <h1 style="color: #F5F5F5;">Search by Price</h1><br>
-        <h3 style="color: rgb(0, 0, 0);"><strong>Note:  1)Enter the value taking into consideration the usage of ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 1600000, but write it as 16,00,000<br><br>
-                                                        2)Being a representational site, it presently has only 5 values of prices being 16L, 18L, 19L, 20L and 22L. So please search in these alternatives to get the property details.</strong></h3><br>
+        <h3 style="color: rgb(0, 0, 0);"><strong>Note:  1)Enter the value do not use ',' for place value, i.e. for 16 Lakhs, do not write 16lac or 16 Lac or 16,00,000, but write it as 1600000<br><br>
+                                                        2)Being a representational site, it presently has only 5 values of prices being 25L, 33L, 36L, 39L and 42L. So please search in these alternatives to get the property details.</strong></h3><br>
         <h4 style="color: #F5F5F5;">Rs.</h4>
         <input> <button class="btn btn-primary" type="submit" onclick="search_value()">Submit</button>
         
