--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="row">
       <div class="blog-item-outer col-sm-12 col-md-3 bhk1">
         <div class="blog-item">
-          <a href="./1-bhk/1bhk.html" target="_blank" style="text-decoration: none; font-size: 3.5rem; color: black;">
+          <a href="1-bhk/1bhk.html" target="_blank" style="text-decoration: none; font-size: 3.5rem; color: black;">
             <center><strong>1-BHK</strong></center>
           </a>
         </div>
@@ -55,7 +55,7 @@
 
       <div class="blog-item-outer col-sm-12 col-md-3 bhk2">
         <div class="blog-item">
-          <a href="./2-bhk/2bhk.html" target="_blank" style="text-decoration: none; font-size: 3.5rem; color: #000000;">
+          <a href="2-bhk/2bhk.html" target="_blank" style="text-decoration: none; font-size: 3.5rem; color: #000000;">
             <center><strong>2-BHK</strong></center>
           </a>
         </div>
@@ -63,7 +63,7 @@
 
       <div class="blog-item-outer col-sm-12 col-md-3 bhk3">
         <div class="blog-item">
-          <a href="./3-bhk/3bhk.html" target="_blank" style="text-decoration: none; font-size: 3.5rem; color: rgb(0, 0, 0);">
+          <a href="3-bhk/3bhk.html" target="_blank" style="text-decoration: none; font-size: 3.5rem; color: rgb(0, 0, 0);">
             <center><strong>3-BHK</strong></center>
           </a>
         </div>
