commit on issue of linking pages

--- a/1-bhk/1bhk.html
+++ b/1-bhk/1bhk.html
@@ -14,10 +14,10 @@
 <body>
     <div id="container-wrap">
     <div class="topnav" id="myTopnav">
-        <a href="D://Projects/Gruha/index.html"><img src="D://Projects/Gruha/img/Untitled.png" style="width: 1.5rem; height: auto;"> Gruha</a>
-        <a href="D://Projects/Gruha/1-bhk/1bhk.html" class="active">1-BHK</a>
-        <a href="D://Projects/Gruha/2-bhk/2bhk.html">2-BHK</a>
-        <a href="D://Projects/Gruha/3-bhk/3bhk.html">3-BHK</a>
+        <a href="../index.html"><img src="D://Projects/Gruha/img/Untitled.png" style="width: 1.5rem; height: auto;"> Gruha</a>
+        <a href="../1-bhk/1bhk.html" class="active">1-BHK</a>
+        <a href="../2-bhk/2bhk.html">2-BHK</a>
+        <a href="../3-bhk/3bhk.html">3-BHK</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
