--- a/2-bhk/2bhk.html
+++ b/2-bhk/2bhk.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container-wrap">
     <div class="topnav" id="myTopnav">
-        <a href="../index.html"><img src="D://Projects/Gruha/img/Untitled.png" style="width: 1.5rem; height: auto;"> Gruha</a>
+        <a href="../index.html"><img src="../img/Untitled.png" style="width: 1.5rem; height: auto;"> Gruha</a>
         <a href="../1-bhk/1bhk.html">1-BHK</a>
         <a href="../2-bhk/2bhk.html" class="active">2-BHK</a>
         <a href="../3-bhk/3bhk.html">3-BHK</a>
