landing page update

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a href="#About">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
+      <a href="#Concept">The Concept</a>
+      <a href="#choose_bhk">Services</a>
       <a href="#">Attachments</a>
     </div>
     
@@ -42,8 +42,32 @@
   </div>
   <br>
 
+  <div id="About" data-aos="zoom-in-up" data-aos-duration="2000">
+    <h2>About</h2><br>
+    <h4>Gruha is an attempt to make property searching easy and efficient in times, when we are able to find only a handful
+         of homes on the internet, and are not so satisfied with the options available. Not a conventional place, where you will 
+         deal with traditional brokers and loose excess money in commissions. In the cities of our services, we try to cover each 
+         and every place, conduct surveys, and list down the best places, to help you find your ideal homes.
+    </h4>
+  </div>
+  <br>
+
+  <div id="Concept" data-aos="zoom-in-up" data-aos-duration="2000">
+    <h2>The Concept</h2><br>
+    <h4>Searching Algorithms are heavily used today in all types of websites and mobile applications, due to the increasing demand 
+      and heavy use of search features. It becomes easy for us to find what we require at that point of time. Binary Searching Algorithm 
+      and Hash Functions are such important concepts which form the base of this. These can be performed as both arrays and trees(Binary Search Tree),
+      which also points to the concept of graphs.<br><br>
+
+      In this website too, Binary Search Algorithm will be used in the searching of values by price. In the categories below, you will get 
+      directed to individual pages. There, you will need to enter the price expected in the search bar. The instructions are given in the page regarding 
+      entering the values, with the range available.
+    </h4>
+  </div>
+  <br>
+
   <div id="choose_bhk" data-aos="zoom-in-up" data-aos-duration="2000">
-    <h2 style="font-family: 'Open Sans', sans-serif;">Choose the BHK type of your dream home</h2>
+    <h2 style="font-family: 'Open Sans', sans-serif;">Services</h2>
     <div class="row">
       <div class="blog-item-outer col-sm-12 col-md-3 bhk1">
         <div class="blog-item">
@@ -71,15 +95,6 @@
     </div>     
   </div>
   <br>
-
-  <div id="About" data-aos="zoom-in-up" data-aos-duration="2000">
-    <h2>About</h2><br>
-    <h4>Gruha is an attempt to make property searching easier and efficient in times, when we are able to find only a handful
-         of homes on the internet, and are not so satisfied with the options available. Not a conventional place, where you will 
-         deal with traditional brokers and loose excess money in commissions. In the cities of our service, we try to cover each 
-         and every place, conduct surveys, and list down the best places, to help you find your ideal homes.
-    </h4>
-  </div>
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
