landing page update

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="#About">About</a>
       <a href="#Concept">The Concept</a>
       <a href="#choose_bhk">Services</a>
+      <a href="#contact">Gratitude</a>
       <a href="#">Attachments</a>
     </div>
     
@@ -46,8 +47,8 @@
     <h2>About</h2><br>
     <h4>Gruha is an attempt to make property searching easy and efficient in times, when we are able to find only a handful
          of homes on the internet, and are not so satisfied with the options available. Not a conventional place, where you will 
-         deal with traditional brokers and loose excess money in commissions. In the cities of our services, we try to cover each 
-         and every place, conduct surveys, and list down the best places, to help you find your ideal homes.
+         deal with traditional brokers and loose excess money in commissions. In the cities of our services, we will try to cover each 
+         and every place, conduct surveys on the interntional guidlines, and list down the best places, to help you find your ideal homes.
     </h4>
   </div>
   <br>
@@ -95,6 +96,20 @@
     </div>     
   </div>
   <br>
+
+  <div id="contact" data-aos="zoom-in-up" data-aos-duration="2000">
+    <h2>Gratitude...</h2><br>
+    <h4>
+      I believe that every project has large scope of improvements. This is the first version of the website, all on the 
+      frontend side. This was an attempt to make a project which has its own scope of commercialization. I would like to 
+      sincerely thank Prof. Manish Gupta, our instructor for SC-205 Discrete Mathematics Course, for providing a platform to 
+      put technical skills to build something useful for the society.<br><br>
+
+      For suggestions, please contact me on my email: aniruddhmuley2001@yahoo.com<br><br>
+
+      Submitted by: Aniruddh Muley, Roll no. 201901222.
+    </h4>
+  </div>
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
