issue of nav bar cleared

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
     <h4>
       I believe that every project has large scope of improvements. This is the first version of the website, all on the 
       frontend side. This was an attempt to make a project which has its own scope of commercialization. I would like to 
-      sincerely thank Prof. Manish Gupta, our instructor for SC-205 Discrete Mathematics Course, for providing a platform to 
+      sincerely thank <strong>Prof. Manish Gupta</strong>, our instructor for SC-205 Discrete Mathematics Course, for providing a platform to 
       put technical skills to build something useful for the society.<br><br>
 
       For suggestions, please contact me on my email: aniruddhmuley2001@yahoo.com<br><br>
 
-      Submitted by: Aniruddh Muley, Roll no. 201901222.
+      Submitted by: Aniruddh Muley, Roll no. 201901222
     </h4>
   </div>
 
