--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#Concept">The Concept</a>
       <a href="#choose_bhk">Services</a>
       <a href="#contact">Gratitude</a>
-      <a href="#">Attachments</a>
+      <a href="https://drive.google.com/open?id=1W480UWCRn51NriXakdMENrDA7XDt92xU" target="_blank">Attachments</a>
     </div>
     
     <!-- Use any element to open the sidenav -->
@@ -104,6 +104,8 @@
       frontend side. This was an attempt to make a project which has its own scope of commercialization. I would like to 
       sincerely thank <strong>Prof. Manish Gupta</strong>, our instructor for SC-205 Discrete Mathematics Course, for providing a platform to 
       put technical skills to build something useful for the society.<br><br>
+
+      Check out my YouTube playlist for videos <a href="https://www.youtube.com/playlist?list=PL5U14BXi96FI3OZtX1smG-lK28q0jULRn" target="_blank">here</a>.<br><br>
 
       For suggestions, please contact me on my email: aniruddhmuley2001@yahoo.com<br><br>
 
