--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#Concept">The Concept</a>
       <a href="#choose_bhk">Services</a>
       <a href="#contact">Gratitude</a>
-      <a href="https://drive.google.com/open?id=1W480UWCRn51NriXakdMENrDA7XDt92xU" target="_blank">Attachments</a>
+      <a href="https://drive.google.com/drive/folders/1W480UWCRn51NriXakdMENrDA7XDt92xU?usp=sharing" target="_blank">Attachments</a>
     </div>
     
     <!-- Use any element to open the sidenav -->
