--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Arapey&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
@@ -68,7 +69,7 @@
   <br>
 
   <div id="choose_bhk" data-aos="zoom-in-up" data-aos-duration="2000">
-    <h2 style="font-family: 'Open Sans', sans-serif;">Services</h2>
+    <h2 style="font-family: 'Open Sans', sans-serif; padding: 0.5rem;">Services</h2>
     <div class="row">
       <div class="blog-item-outer col-sm-12 col-md-3 bhk1">
         <div class="blog-item">
